[tool.poetry]
name = "canolaField"
version = "0.1.0"
description = "A video toy to relax watching grains form a peaceful picture"
authors = ["Arnaud Meuret <arnaud@meuret.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pyxel = "^1.6.9"
pytweening = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
